packages/cashc/test/compiler/ParseError/expression_in_console_log.cash
contract DebugMessages() {
  function spend(int value) {
    console.log(value + 2);
  }
}
